--- a/Functions3.ipynb
+++ b/Functions3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:df825c72da2ca927111accc449bd650894ead9e880798afd866ec7c54f4dee47"
+  "signature": "sha256:e521419fa82ddb9753c85fcdf825e08d9e9fcd7e7b6e734a953d80cee4ae0ba9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,15 +14,19 @@
      "source": [
       "#Calling Multiple functions\n",
       "\n",
-      "We can us the output of one function in another in different ways. Let's make a second function. We're going to bring in a little material from testing, which we'll be learning in a bit."
+      "\n",
+      "We can use the output of one function in another in different ways. Let's make a second function that uses the output of our first."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def check_type():\n",
-      "   assert type(We need to put something here!) == list"
+      "def check_letter(letter):\n",
+      "   if letter == 'q':\n",
+      "        print 'yay!'\n",
+      "   else:\n",
+      "        print 'Not a Q!'\n"
      ],
      "language": "python",
      "metadata": {},
@@ -40,8 +44,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def check_type():\n",
-      "   assert type(filter_name(last_name,key)[1]) == list"
+      "def check_letter(letter):\n",
+      "   if letter == 'q':\n",
+      "        print 'yay!'\n",
+      "   else:\n",
+      "        print 'Not a Q!'\n"
      ],
      "language": "python",
      "metadata": {},
@@ -70,13 +77,16 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def check_type(pos_list):\n",
-      "   assert type(pos_list) == list\n",
+      "def check_letter(letter):\n",
+      "   if letter == 'q':\n",
+      "        print 'yay!'\n",
+      "   else:\n",
+      "        print 'Not a Q!'\n",
       "   \n",
       "   \n",
       "if __name__ == '__main__':\n",
-      "    pos_list = filter_name(last_name,key)[1]\n",
-      "    check_type(pos_list)"
+      "    letter = filter_name(last_name,key)[1]\n",
+      "    check_letter(letter)"
      ],
      "language": "python",
      "metadata": {},
