--- a/Testing2.ipynb
+++ b/Testing2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:68483c03514078d778a653c51bf5066fc8c0e43e338c8c95f2d8e8637ad9d1f2"
+  "signature": "sha256:3dfb747083f4bfe3d28b219cd1f439cb2d79850b3195f9f6f0e57747ab2534e0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -26,13 +26,6 @@
      "collapsed": false,
      "input": [
       "def filter_name(last_name, key):\n",
-      "\t\"\"\"\n",
-      "\tfunctions have a special kind of comment called a docstring. It is denoted\n",
-      "\twith three quotes. These can be multi-line without including the quotes on \n",
-      "\teach line. These are just helpful comments at the novice level, but if you \n",
-      "\tplan to distribute code, are very important. See here for more: \n",
-      "\thttp://www.pythonforbeginners.com/basics/python-docstrings \n",
-      "\t\"\"\"\n",
       "\n",
       "        positives = []\n",
       "        negatives = []\n",
@@ -44,45 +37,71 @@
       "            else: \n",
       "                negatives.append(letter)\n",
       "        return([positives, negatives])\n",
-      "        "
+      "filter_name (last_name, key)     "
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "AssertionError",
+       "evalue": "",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-50-4b4e17c84603>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m                 \u001b[0mnegatives\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mletter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;32mreturn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpositives\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnegatives\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mfilter_name\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlast_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m<ipython-input-50-4b4e17c84603>\u001b[0m in \u001b[0;36mfilter_name\u001b[1;34m(last_name, key)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#Regular comments can be embedded in the text after a pound sign.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mletter\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlast_name\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m             \u001b[1;32massert\u001b[0m \u001b[0mletter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misalpha\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mletter\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m                 \u001b[0mpositives\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mletter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mAssertionError\u001b[0m: "
+       ]
+      }
+     ],
+     "prompt_number": 50
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "last_name = 'wr1ght'\n",
+      "key = 'g'\n",
       "def filter_name(last_name, key):\n",
-      "\t\"\"\"\n",
-      "\tfunctions have a special kind of comment called a docstring. It is denoted\n",
-      "\twith three quotes. These can be multi-line without including the quotes on \n",
-      "\teach line. These are just helpful comments at the novice level, but if you \n",
-      "\tplan to distribute code, are very important. See here for more: \n",
-      "\thttp://www.pythonforbeginners.com/basics/python-docstrings \n",
-      "\t\"\"\"\n",
       "\n",
       "        positives = []\n",
       "        negatives = []\n",
-      "#Regular comments can be embedded in the text after a pound sign.\n",
       "        for letter in last_name:\n",
       "            try:\n",
-      "                letter.isalpha() == True\n",
-      "                if letter == key:\n",
+      "               print int(letter)\n",
+      "               print \"this isn't a letter\"\n",
+      "               pass\n",
+      "            except:\n",
+      "               letter = letter.lower() \n",
+      "               if letter == key:\n",
       "                    positives.append(letter)\n",
-      "                else: \n",
+      "               else: \n",
       "                    negatives.append(letter)\n",
-      "            except TypeError:\n",
-      "                print \"this isn't a letter\"\n",
-      "                pass\n",
+      "\n",
       "        return([positives, negatives])\n",
-      "        "
+      "filter_name(last_name, key)        "
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1\n",
+        "this isn't a letter\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 49,
+       "text": [
+        "[['g'], ['w', 'r', 'h', 't']]"
+       ]
+      }
+     ],
+     "prompt_number": 49
     },
     {
      "cell_type": "markdown",
@@ -97,13 +116,6 @@
      "collapsed": false,
      "input": [
       "def filter_name(filter_list, key):\n",
-      "\t\"\"\"\n",
-      "\tfunctions have a special kind of comment called a docstring. It is denoted\n",
-      "\twith three quotes. These can be multi-line without including the quotes on \n",
-      "\teach line. These are just helpful comments at the novice level, but if you \n",
-      "\tplan to distribute code, are very important. See here for more: \n",
-      "\thttp://www.pythonforbeginners.com/basics/python-docstrings \n",
-      "\t\"\"\"\n",
       "        positives = []\n",
       "        negatives = []\n",
       "#Regular comments can be embedded in the text after a pound sign.\n",
@@ -138,7 +150,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['w', 'r', 'h', 't']\n"
+       ]
+      }
+     ],
+     "prompt_number": 53
     },
     {
      "cell_type": "markdown",
@@ -159,6 +180,14 @@
       "\n",
       "+ Write a test that would ensure the input to your function will work with your function.\n"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
